force-app/main/default/objects/Driver__c/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <label>License Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>